--- a/MacOS/SignCAAppMacOS/AppMacOS.axaml
+++ b/MacOS/SignCAAppMacOS/AppMacOS.axaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="SignCAApp.App"
+             x:Class="SignCAAppMacOS.AppMacOS"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
